// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`maxWidth('hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
5
╚══════════════════════════════════════════════════╝"
`;

exports[`maxWidth('short\\nlonger line\\nhi') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
short
longer line
hi
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
11
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('hello', 3, 'left') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
────────────────────────────────────────────────────
3
────────────────────────────────────────────────────
left
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hello
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('hi', 5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
────────────────────────────────────────────────────
5
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('hi', 5, 'left') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
────────────────────────────────────────────────────
5
────────────────────────────────────────────────────
left
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('hi', 5, 'right') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
────────────────────────────────────────────────────
5
────────────────────────────────────────────────────
right
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`pad('x', 5, 'right', '-') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
x
────────────────────────────────────────────────────
5
────────────────────────────────────────────────────
right
────────────────────────────────────────────────────
-
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
x----
╚══════════════════════════════════════════════════╝"
`;

exports[`size('') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  maxWidth: 0,
  height: 0
}
╚══════════════════════════════════════════════════╝"
`;

exports[`size('hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  maxWidth: 5,
  height: 1
}
╚══════════════════════════════════════════════════╝"
`;

exports[`size('hello\\nworld') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
world
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  maxWidth: 5,
  height: 2
}
╚══════════════════════════════════════════════════╝"
`;

exports[`size('hi\\nlonger line\\nbye') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
longer line
bye
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  maxWidth: 11,
  height: 3
}
╚══════════════════════════════════════════════════╝"
`;

exports[`span('hi', 5, 'left') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
────────────────────────────────────────────────────
5
────────────────────────────────────────────────────
left
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`span('hi', 5, 'right') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
────────────────────────────────────────────────────
5
────────────────────────────────────────────────────
right
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`span('x', 5, 'left', '.') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
x
────────────────────────────────────────────────────
5
────────────────────────────────────────────────────
left
────────────────────────────────────────────────────
.
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
x....
╚══════════════════════════════════════════════════╝"
`;

exports[`take('hello world', 5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello world
────────────────────────────────────────────────────
5
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hello
╚══════════════════════════════════════════════════╝"
`;

exports[`take('hi', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hi
────────────────────────────────────────────────────
10
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
hi
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

────────────────────────────────────────────────────
10
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: '',
  remaining: ''
}
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('hello world here', 12) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello world here
────────────────────────────────────────────────────
12
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: 'hello world',
  remaining: 'here'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('short', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
short
────────────────────────────────────────────────────
10
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: 'short',
  remaining: ''
}
╚══════════════════════════════════════════════════╝"
`;

exports[`takeWords('verylongword more', 8) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
verylongword more
────────────────────────────────────────────────────
8
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  taken: 'verylongword',
  remaining: 'more'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`width('') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`width('\\x1B[1m\\x1B[4mbold underline\\x1B[0m') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[1m[4mbold underline[0m
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
14
╚══════════════════════════════════════════════════╝"
`;

exports[`width('\\x1B[31m\\x1B[0m') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[31m[0m
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`width('\\x1B[31mred\\x1B[0m') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[31mred[0m
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`width('\\x1B[32mgreen\\x1B[0m text') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[32mgreen[0m text
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
10
╚══════════════════════════════════════════════════╝"
`;

exports[`width('abc') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
abc
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`width('hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
5
╚══════════════════════════════════════════════════╝"
`;

exports[`width('é') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
é
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`width('🇺🇸') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
🇺🇸
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`width('👋 \\x1B[32mhello\\x1B[0m') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
👋 [32mhello[0m
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
7
╚══════════════════════════════════════════════════╝"
`;

exports[`width('👋') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
👋
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`width('👨‍👩‍👧‍👦') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
👨‍👩‍👧‍👦
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap('', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

────────────────────────────────────────────────────
10
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap('hello world here', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello world here
────────────────────────────────────────────────────
10
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'hello', 'world here' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap('hello world', 5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello world
────────────────────────────────────────────────────
5
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'hello', 'world' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap('hello world', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello world
────────────────────────────────────────────────────
10
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'hello', 'world' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap('one\\ntwo\\nthree', 10) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
one
two
three
────────────────────────────────────────────────────
10
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'one', 'two', 'three' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap('short', 20) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
short
────────────────────────────────────────────────────
20
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'short' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`wrap('verylongword more', 8) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
verylongword more
────────────────────────────────────────────────────
8
╠══════════════════════════════════════════════════╣ THEN RETURNS ARRAY
[ 'verylongword', 'more' ]
╚══════════════════════════════════════════════════╝"
`;
